@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-10T16:00:46Z",
+  "timestamp" : "2024-02-11T00:28:19Z",
   "count_outdated" : 3792,
   "uniques_outdated" : 1721,
-  "count" : 3838,
-  "uniques" : 1751,
+  "count" : 3839,
+  "uniques" : 1752,
   "clones" : [
     {
       "timestamp": "2024-01-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
