@@ -1,10 +1,10 @@
 {
   "count": 46,
-  "uniques": 15,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2024-01-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2024-02-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-02-10T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
